@@ -1,3 +1,8 @@
+2013-04-22  Anton Kolesov  <Anton.Kolesov@synopsys.com>
+
+	* dejagnu/baseboards/arc-sim-nsimdrv.exp: Use nSIM GNU IO hostlink
+	if separate hostlink library is no specified explicitly.
+
 2014-03-28  Anton Kolesov  <Anton.Kolesov@synopsys.com>
 
 	* windows-installer/arcshell.bat: New file.
